packages/svelte/tests/compiler-errors/samples/runes-before-after-update/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-runes-mode-import',
		message: 'beforeUpdate cannot be used in runes mode'
	}
});
